# learnlocal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENV_ENGINE_EVOLUTION.md  FEATURE_IDEAS.md  FUTURE_COURSES.md  FUTURE_PLANS.md  LICENSE-APACHE  LICENSE-COURSES  LICENSE-MIT  README.md  learnlocal-spec-v2.md  learnlocal-spec.md  nohup.out
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
courses/ai-fundamentals-python/: course.yaml
courses/ai-fundamentals-python/lessons/00-vectors-and-math/: content.md  lesson.yaml
courses/ai-fundamentals-python/lessons/01-similarity-and-search/: content.md  lesson.yaml
courses/ai-fundamentals-python/lessons/02-the-perceptron/: content.md  lesson.yaml
courses/ai-fundamentals-python/lessons/03-neural-networks/: content.md  lesson.yaml
courses/ai-fundamentals-python/lessons/04-training-and-optimization/: content.md  lesson.yaml
courses/cpp-fundamentals/: course.yaml
courses/env-engine-test/: course.yaml
courses/git-time-travel/: course.yaml
courses/go-fundamentals/: course.yaml
courses/incident-sim/: course.yaml
courses/js-fundamentals/: course.yaml
courses/linux-fundamentals/: course.yaml
courses/python-fundamentals/: course.yaml
courses/rust-fundamentals/: course.yaml
courses/sql-fundamentals/: course.yaml
docs/: testing-guide.md
docs/design/: phase-6-community-platform.md  sprint-1-foundation.md  sprint-10-author-and-stages.md
src/: cli.rs  cli_fmt.rs  config.rs  error.rs  exit_codes.rs  main.rs
src/author/: api.rs  mod.rs  preview.rs  server.rs  solution_runner.rs  workspace.rs  yaml_rw.rs
src/community/: download.rs  mod.rs  package.rs  registry.rs  types.rs
src/course/: loader.rs  mod.rs  types.rs  validator.rs
src/exec/: embedded.rs  environment.rs  mod.rs  placeholder.rs  provision.rs  registry.rs  runner.rs  sandbox.rs  toolcheck.rs  validate.rs
src/llm/: backend.rs  channel.rs  chat.rs  config.rs  context.rs  mod.rs  ollama.rs
src/server/: api.rs  auth.rs  db.rs  mod.rs  run.rs
src/state/: mod.rs  progress.rs  sandbox.rs  signals.rs  types.rs
src/ui/: app.rs  browse.rs  celebration.rs  course_app.rs  diagnostics.rs  diff.rs  editor.rs  editor_detect.rs  howto.rs  inline_editor.rs  markdown.rs  mod.rs  screens.rs  shell.rs  terminal.rs  theme.rs  tour.rs  watch.rs
src/ui/views/: exercise.rs  lesson.rs  mod.rs  result.rs  status_bar.rs
src/web/: app.js  index.html  style.css
tests/fixtures/minimal-course/: course.yaml
(+704 files in other folders)
