[package]
name = "learnlocal"
version = "0.1.0"
edition = "2021"
description = "Offline terminal-based programming tutorial framework"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ratatui = "0.25"
crossterm = "0.27"
pulldown-cmark = "0.9"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
semver = { version = "1.0", features = ["serde"] }
regex = "1.10"
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
llm = ["tokio", "reqwest", "tokio-stream"]

[dependencies.tokio]
version = "1.0"
features = ["rt", "net", "time", "io-util", "macros", "sync"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true
