[package]
name = "learnlocal"
version = "0.1.1"
edition = "2021"
description = "Offline terminal-based programming tutorial framework"
authors = ["Mark Wind"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thehighnotes/learnlocal"
homepage = "https://github.com/thehighnotes/learnlocal"
readme = "README.md"
keywords = ["tutorial", "education", "terminal", "offline", "programming"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.74.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ratatui = "0.25"
crossterm = "0.27"
pulldown-cmark = "0.9"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.26"
semver = { version = "1.0", features = ["serde"] }
regex = "1.10"
notify = "8.2"
rusqlite = { version = "0.31", features = ["bundled"] }
clap_complete = "4.4"
clap_mangen = "0.2"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"

[features]
llm = ["tokio", "reqwest", "tokio-stream"]

[dependencies.tokio]
version = "1.0"
features = ["rt", "net", "time", "io-util", "macros", "sync"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true

[profile.release]
strip = true
